2016-06-09  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_ctrl_recv): Rename.
	(usb_lld_ctrl_send): Rename.
	(usb_lld_ctrl_ack): Rename and let have return value.
	* mcu/usb-mkl27z.c: Likewise.

	* example-cdc/usb-cdc.c: Follow the change of API.
	* example-fs-bb48/usb-cdc.c: Likewise.

2016-06-08  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c: Rewrite to be event driven API.
	* mcu/usb-mkl27z.c: Likewise.

	* example-cdc/usb-cdc.c: Update to new USB API.
	* example-fs-bb48/usb-cdc.c: Likewise.

	* example-cdc/tty.h: Change tty API to be C string (char*)
	friendly.
	* example-fs-bb48/tty.h: Ditto.

2016-06-02  Niibe Yutaka  <gniibe@fsij.org>

	* contrib/adc-mkl27z.c: Move from mcu.
	* contrib/adc-stm32f103.c: Move from mcu.

	* example-led/Makefile (CHIP): Define as stm32f0.

	* mcu/sys-stm32f0.h: Rename from sys-stm32f030.h,
	as we share it among STM32F030 and STM32F050.
	* mcu/sys-stm32f0.c: Likewise.

	* board/board-stm32f0-discovery.h (MCU_STM32F0): Define.

	* sys.h: Support STM32F0.

2016-06-01  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (chx_fatal): Remove weak attribute from declaration.
	* chopstx.c (chx_fatal): Add weak attribute to implementation.

2016-05-31  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 0.12.
	* doc/chopstx.texi (VERSION): 0.12.

	* sys.h: New.

	* example-cdc, example-fs-bb48: Update.
	* example-fsm-55, example-led: Update.

2016-05-30  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_setup_endpoint): Start with
	EP_RX_NAK.

	* mcu/usb-mkl27z.c (handle_transaction): Handle NAK case.
	(usb_lld_setup_endp): Rename from usb_lld_setup_endpoint.
	(usb_lld_rx_enable_buf): Rename from usb_lld_rx_enable.
	(usb_lld_tx_enable_buf): Rename from usb_lld_tx_enable.

	* mcu/adc-stm32f103.c: New from NeuG.
	* mcu/stm32f103.h: New from NeuG.

	* example-cdc: Update.

2016-05-30  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/adc-mkl27z.c, mcu/sys-mkl27z.c, mcu/usb-mkl27z.c: Moved from
	example-fs-bb48.
