@@ -1,3 +1,12 @@
+2016-06-10  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* usb_lld.h (USB_EVENT_OK): Rename.
+	* mcu/usb-stm32f103.c: Update.
+	* mcu/usb-mkl27z.c: Likewise.
+
+	* example-cdc/usb-cdc.c: Follow the change of API.
+	* example-fs-bb48/usb-cdc.c: Likewise.
+
 2016-06-09  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* mcu/usb-stm32f103.c (usb_lld_ctrl_recv): Rename.
